--- a/013_border-radius/main.css
+++ b/013_border-radius/main.css
@@ -1,9 +1,8 @@
 div{
     width: 100px;
     height: 100px;
-    border: 1px solid red;
     border-radius: 100%;
-    background-image: url("../000_img/pup.jpg");
+    background-image: url("../000_img/surf.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
 }
