--- a/015_padding-margin/main.css
+++ b/015_padding-margin/main.css
@@ -8,7 +8,7 @@ div{
 
 img {
     border: 10px groove orangered;
-    border-radius: 100%;
+    /*border-radius: 100%;*/
     padding: 20px;
     margin: 30px;
 }
